k8s/manifests/control.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control
  namespace: agua-inteligente
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control
  template:
    metadata:
      labels:
        app: control
    spec:
      containers:
      - name: control
        image: nginx
