k8s/manifests/sensor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor
  namespace: agua-inteligente
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor
  template:
    metadata:
      labels:
        app: sensor
    spec:
      containers:
      - name: sensor
        image: nginx
